--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,6 +1,13 @@
+.container {
+  max-width: : 90%;
+}
+.navbar .navbar-default {
+  background-color: #2c3e50;
+}
 input[type="radio"] {
   margin-right: 10px;
 }
 iframe {
   max-width: 90%;
 }
+*{font-family: Raleway;}
