--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,6 @@
   max-width: : 90%;
 }
 .navbar .navbar-default {
-  background-color: #2c3e50;
 }
 input[type="radio"] {
   margin-right: 10px;
@@ -11,3 +10,7 @@ iframe {
   max-width: 90%;
 }
 *{font-family: Raleway;}
+
+.active {
+  background: white;
+}
